--- a/event/Gemfile
+++ b/event/Gemfile
@@ -17,5 +17,12 @@ gem "jquery-rails"
 # gem 'debugger'
 
 gem 'dm_ruby_extensions', :git => 'git://github.com/digitalmoksha/dm_ruby_extensions.git'
-gem 'dm_core', :git => 'git://github.com/digitalmoksha/dm_core.git'
-gem 'easy_globalize3_accessors', :git => 'git://github.com/digitalmoksha/easy_globalize3_accessors.git'
+gem 'dm_core',            :git => 'git://github.com/digitalmoksha/dm_core.git'
+gem 'dm_cms',             :git => 'git://github.com/digitalmoksha/dm_cms.git'
+gem 'preferences',        :git => "git://github.com/digitalmoksha/preferences.git"
+gem 'themes_for_rails',   :git => 'git://github.com/digitalmoksha/themes_for_rails.git'
+gem 'aced_rails',         :git => 'git://github.com/digitalmoksha/aced_rails.git'
+
+# To use debugger
+gem 'debugger'
+gem 'ruby_gntp'
