--- a/cms/.gitignore
+++ b/cms/.gitignore
@@ -5,3 +5,6 @@ test/dummy/db/*.sqlite3
 test/dummy/log/*.log
 test/dummy/tmp/
 test/dummy/.sass-cache
+spec/dummy/db/test.sqlite3
+spec/dummy/log/development.log
+spec/dummy/log/test.log
