--- a/cms/Gemfile
+++ b/cms/Gemfile
@@ -19,11 +19,11 @@ gem 'themes_for_rails',     git: 'git://github.com/digitalmoksha/themes_for_rail
 gem 'aced_rails',           git: 'git://github.com/digitalmoksha/aced_rails.git'
 
 gem 'dm_ruby_extensions',   git: 'git://github.com/digitalmoksha/dm_ruby_extensions.git'
-# gem 'dm_core',              git: 'git://github.com/digitalmoksha/dm_core.git'
+gem 'dm_core',              git: 'git://github.com/digitalmoksha/dm_core.git'
 gem 'admin_theme_sbadmin2', git: 'git://github.com/digitalmoksha/admin_theme_sbadmin2.git'
 gem 'dm_admin',             git: 'git://github.com/digitalmoksha/dm_admin.git'
 
-gem 'dm_core',              path: '/Users/walkerbl/Sites/In_Development/_github/_moksha_gems/dm_core'
+# gem 'dm_core',              path: '/Users/walkerbl/Sites/In_Development/_github/_moksha_gems/dm_core'
 
 group :development, :test do
   gem 'sqlite3'
