--- a/newsletter/Gemfile
+++ b/newsletter/Gemfile
@@ -13,8 +13,7 @@ gem 'jquery-ui-rails'
 # Git. Remember to move these dependencies to your gemspec before releasing
 # your gem to rubygems.org.
 
-gem 'dm_ruby_extensions',   git: 'git://github.com/digitalmoksha/dm_ruby_extensions.git'
-gem 'dm_core',              git: 'git://github.com/digitalmoksha/dm_core.git'
+gem 'dm_core',              git: 'git://github.com/digitalmoksha/dm_core.git', branch: '1-1-stable'
 
 gem 'preferences',          git: 'git://github.com/digitalmoksha/preferences.git'
 gem 'themes_for_rails',     git: 'git://github.com/digitalmoksha/themes_for_rails.git'
