--- a/cms/Gemfile
+++ b/cms/Gemfile
@@ -5,7 +5,7 @@ source "http://rubygems.org"
 # development dependencies will be added by default to the :development group.
 gemspec
 
-gem 'rails', '4.1.11'
+gem 'rails', '4.2.5.1'
 
 # jquery-rails is used by the dummy application
 gem "jquery-rails"
@@ -16,13 +16,13 @@ gem 'jquery-ui-rails'
 # Git. Remember to move these dependencies to your gemspec before releasing
 # your gem to rubygems.org.
 
-gem 'preferences',          git: 'https://github.com/digitalmoksha/preferences.git'
+gem 'dm_preferences',       '~> 1.0'
 gem 'themes_for_rails',     git: 'https://github.com/digitalmoksha/themes_for_rails.git'
 gem 'aced_rails',           git: 'https://github.com/digitalmoksha/aced_rails.git'
 
-gem 'dm_core',              git: 'https://github.com/digitalmoksha/dm_core.git', branch: '1-1-stable'
+gem 'dm_core',              git: 'https://github.com/digitalmoksha/dm_core.git'
 gem 'admin_theme_sbadmin2', git: 'https://github.com/digitalmoksha/admin_theme_sbadmin2.git'
-gem 'dm_admin',             git: 'https://github.com/digitalmoksha/dm_admin.git', branch: '1-1-stable'
+gem 'dm_admin',             git: 'https://github.com/digitalmoksha/dm_admin.git'
 
 # gem 'dm_core',              path: '../dm_core'
 
