initial upgrade to Rails 4.2

--- a/event/Gemfile
+++ b/event/Gemfile
@@ -17,9 +17,9 @@ gem 'jquery-ui-rails'
 # To use debugger
 # gem 'debugger'
 
-gem 'dm_core',            git: 'https://github.com/digitalmoksha/dm_core.git', branch: '1-1-stable'
-gem 'dm_cms',             git: 'https://github.com/digitalmoksha/dm_cms.git', branch: '1-1-stable'
-gem 'preferences',        git: "https://github.com/digitalmoksha/preferences.git"
+gem 'dm_preferences',       '~> 1.0'
+gem 'dm_core',            git: 'https://github.com/digitalmoksha/dm_core.git'
+gem 'dm_cms',             git: 'https://github.com/digitalmoksha/dm_cms.git'
 gem 'themes_for_rails',   git: 'https://github.com/digitalmoksha/themes_for_rails.git'
 gem 'aced_rails',         git: 'https://github.com/digitalmoksha/aced_rails.git'
 
