--- a/newsletter/Rakefile
+++ b/newsletter/Rakefile
@@ -1,30 +1,33 @@
+#!/usr/bin/env rake
+require 'rubygems'
+require 'rake'
+require 'rake/testtask'
+require 'rspec/core/rake_task'
+
 begin
   require 'bundler/setup'
 rescue LoadError
   puts 'You must `gem install bundler` and `bundle install` to run rake tasks'
 end
 
-require 'rdoc/task'
-
-RDoc::Task.new(:rdoc) do |rdoc|
-  rdoc.rdoc_dir = 'rdoc'
-  rdoc.title    = 'DmNewsletter'
-  rdoc.options << '--line-numbers'
-  rdoc.rdoc_files.include('README.rdoc')
-  rdoc.rdoc_files.include('lib/**/*.rb')
-end
-
-APP_RAKEFILE = File.expand_path("../spec/dummy/Rakefile", __FILE__)
-load 'rails/tasks/engine.rake'
+# APP_RAKEFILE = File.expand_path("../spec/dummy/Rakefile", __FILE__)
+# load 'rails/tasks/engine.rake'
 
 Bundler::GemHelper.install_tasks
 
-require 'rake/testtask'
+# require 'rspec/core'
+# require 'rspec/core/rake_task'
+require 'moksha_cms/testing_support/common_rake'
 
-require 'rspec/core'
-require 'rspec/core/rake_task'
+RSpec::Core::RakeTask.new
 
-desc "Run all specs in spec directory (excluding plugin specs)"
-RSpec::Core::RakeTask.new(:spec => 'app:db:test:prepare')
+# desc "Run all specs in spec directory (excluding plugin specs)"
+# RSpec::Core::RakeTask.new(:spec => 'app:db:test:prepare')
 
 task :default => :spec
+
+desc "Generates a dummy app for testing"
+task :test_app do
+  ENV['LIB_NAME'] = 'dm_cms'
+  Rake::Task['common:test_app'].invoke
+end
