--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,7 +17,7 @@ AllCops:
     - '**/bin/**/*'
     - '**/generator_templates/**/*'
     - '**/builds/**/*'
-    - '**/dummy/templates/rails/application.rb'
+    - '**/dummy/**/*'
   CacheRootDirectory: tmp
 
 # This cop checks whether some constant value isn't a
