--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,6 @@ inherit_from: .rubocop_todo.yml
 # require: ./rubocop/rubocop
 
 AllCops:
-  TargetRailsVersion: 5.0
   Exclude:
     - '**/vendor/**/*'
     - '**/node_modules/**/*'
@@ -36,3 +35,17 @@ Style/WordArray:
 #     - '**/dummy/templates/rails/application.rb'
 
 
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
