Initial upgraade to rails 5.2

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -58,3 +58,9 @@ Layout/HashAlignment:
   EnforcedColonStyle:
     - key
     - table
+
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: true
+
+Style/SlicingWithRange:
+  Enabled: false
