Fix deprecated calls in datatables and devise bypass signin

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -64,3 +64,6 @@ Layout/EmptyLinesAroundAttributeAccessor:
 
 Style/SlicingWithRange:
   Enabled: false
+
+Lint/DeprecatedOpenSSLConstant:
+  Enabled: true
